src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>InterestIn__c</fullName>
        <label>Interest In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boiler</fullName>
                </value>
                <value>
                    <fullName>Insulation</fullName>
                </value>
                <value>
                    <fullName>Solar Panels</fullName>
                </value>
                <value>
                    <fullName>Energy Saving Lightbulb</fullName>
                </value>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Electricity</fullName>
                </value>
                <value>
                    <fullName>Thermostat</fullName>
                </value>
                <value>
                    <fullName>Heating / Cooling</fullName>
                </value>
                <value>
                    <fullName>Lightbulb</fullName>
                </value>
                <value>
                    <fullName>Service Contract</fullName>
                </value>
                <value>
                    <fullName>Water Saving Equipment</fullName>
                </value>
                <value>
                    <fullName>Energy saving tips</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Created_From_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <inlineHelpText>If the Account was created from a Lead record, this will have value.</inlineHelpText>
        <label>Lead Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_of_Account_Owner__c</fullName>
        <formula>Owner.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager of Account Owner_L1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_From_Webservice__c</fullName>
        <label>Message From Webservice</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <inlineHelpText>Mobile Phone should start with +63 then followed by 10-digit number (Ex. +639178851234).</inlineHelpText>
        <label>Primary Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NetPromotorScore__c</fullName>
        <label>Net Promotor Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoOfActiveAgreements__c</fullName>
        <label>No Of Active Agreements</label>
        <summaryFilterItems>
            <field>Agreement__c.Active_Agreement__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Agreement__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NoOfDaysSinceLastActivity__c</fullName>
        <formula>TODAY() - LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Of Days Since Last Activity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoOfResidents__c</fullName>
        <label>No Of Residents</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Office</label>
        <referenceTo>Office__c</referenceTo>
        <relationshipLabel>Executing Personnels</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OverdueAmount__c</fullName>
        <label>Overdue Amount</label>
        <summarizedField>Invoice__c.Invoice_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice__c.Payment_status__c</field>
            <operation>equals</operation>
            <value>Due</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Invoice__c.Due_Invoice__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Invoice__c.Has_payment_plan__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Premises_Type__c</fullName>
        <description>Type of premise</description>
        <inlineHelpText>Type of premise</inlineHelpText>
        <label>Premises Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single-Detached Residential</fullName>
                </value>
                <value>
                    <fullName>Compound Residential</fullName>
                </value>
                <value>
                    <fullName>Single Commercial</fullName>
                </value>
                <value>
                    <fullName>Commercial Building</fullName>
                </value>
                <value>
                    <fullName>Single Industry</fullName>
                </value>
                <value>
                    <fullName>Groups of Industry</fullName>
                </value>
                <value>
                    <fullName>Streetlights</fullName>
                </value>
                <value>
                    <fullName>Traffic Lights</fullName>
                </value>
                <value>
                    <fullName>Cemetery</fullName>
                </value>
                <value>
                    <fullName>Government Building</fullName>
                </value>
                <value>
                    <fullName>Billboard</fullName>
                </value>
                <value>
                    <fullName>Pole</fullName>
                </value>
                <value>
                    <fullName>Telecom Cabinet</fullName>
                </value>
                <value>
                    <fullName>High-rise Building</fullName>
                </value>
                <value>
                    <fullName>Meralco Use Substation</fullName>
                </value>
                <value>
                    <fullName>Offices</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promoter__c</fullName>
        <formula>IMAGE( 
CASE( NetPromotorScore__c , 

0, &quot;/resource/Promoter/Promoter/0.png&quot;,
1,&quot;/resource/Promoter/Promoter/10.png&quot;,
2, &quot;/resource/Promoter/Promoter/20.png&quot;, 
3,&quot;/resource/Promoter/Promoter/30.png&quot;, 
4, &quot;/resource/Promoter/Promoter/40.png&quot;,
5, &quot;/resource/Promoter/Promoter/50.png&quot;,
6, &quot;/resource/Promoter/Promoter/60.png&quot;,
7, &quot;/resource/Promoter/Promoter/70.png&quot;,
8, &quot;/resource/Promoter/Promoter/80.png&quot;,
9, &quot;/resource/Promoter/Promoter/90.png&quot;,
10, &quot;/resource/Promoter/Promoter/100.png&quot;,
 
&quot;/resource/Promoter/Promoter/0.png&quot;), 

&quot;promoter&quot;,60,60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promoter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RES_Effectivity_Date__c</fullName>
        <label>RES Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RES_Expiration_Date__c</fullName>
        <label>RES End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retail_Electricity_Supplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retail Electricity Supplier?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_Country_Code__c</fullName>
        <formula>if(BillingCountry == &apos;Argentina&apos;,&apos;AR&apos;,
if(BillingCountry == &apos;Australia&apos;,&apos;AU&apos;,
if(BillingCountry == &apos;Belgium&apos;,&apos;BE&apos;,
if(BillingCountry == &apos;Brazil&apos;,&apos;BR&apos;,
if(BillingCountry == &apos;Canada&apos;,&apos;CA&apos;,
if(BillingCountry == &apos;Switzerland&apos;,&apos;CH&apos;,
if(BillingCountry == &apos;Germany&apos;,&apos;DE&apos;,
if(BillingCountry == &apos;Denmark&apos;,&apos;DK&apos;,
if(BillingCountry == &apos;Spain&apos;,&apos;ES&apos;,
if(BillingCountry == &apos;Finland&apos;,&apos;FI&apos;,
if(BillingCountry == &apos;France&apos;,&apos;FR&apos;,
if(BillingCountry == &apos;United Kingdom&apos;,&apos;GB&apos;,
if(BillingCountry == &apos;Greece&apos;,&apos;GR&apos;,
if(BillingCountry == &apos;Italy&apos;,&apos;IT&apos;,
if(BillingCountry == &apos;Netherlands&apos;,&apos;NL&apos;,
if(BillingCountry == &apos;New Zealand&apos;,&apos;NZ&apos;,
if(BillingCountry == &apos;Sweden&apos;,&apos;SE&apos;,
if(BillingCountry == &apos;USA&apos;,&apos;US&apos;,
if(BillingCountry == &apos;India&apos;,&apos;IN&apos;,Null)
))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Address_Barangay__c</fullName>
        <description>Service address barangay</description>
        <inlineHelpText>Service address barangay</inlineHelpText>
        <label>Service Address Barangay</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pinagbuhatan</fullName>
                </value>
                <value>
                    <fullName>Buayang Bato</fullName>
                </value>
                <value>
                    <fullName>Bagong Ilog</fullName>
                </value>
                <value>
                    <fullName>Bagong Katipunan</fullName>
                </value>
                <value>
                    <fullName>Bambang</fullName>
                </value>
                <value>
                    <fullName>Buting</fullName>
                </value>
                <value>
                    <fullName>Caniogan</fullName>
                </value>
                <value>
                    <fullName>Dela Paz</fullName>
                </value>
                <value>
                    <fullName>Kalawaan</fullName>
                </value>
                <value>
                    <fullName>Kapasigan</fullName>
                </value>
                <value>
                    <fullName>Kapitolyo</fullName>
                </value>
                <value>
                    <fullName>Malinao</fullName>
                </value>
                <value>
                    <fullName>Manggahan</fullName>
                </value>
                <value>
                    <fullName>Maybunga</fullName>
                </value>
                <value>
                    <fullName>N Aquino Pilot Com (Napico)</fullName>
                </value>
                <value>
                    <fullName>Oranbo</fullName>
                </value>
                <value>
                    <fullName>Palatiw</fullName>
                </value>
                <value>
                    <fullName>Pasig City (Isolated)</fullName>
                </value>
                <value>
                    <fullName>Pineda</fullName>
                </value>
                <value>
                    <fullName>Rosario</fullName>
                </value>
                <value>
                    <fullName>Sagad</fullName>
                </value>
                <value>
                    <fullName>San Antonio</fullName>
                </value>
                <value>
                    <fullName>San Joaquin</fullName>
                </value>
                <value>
                    <fullName>San Jose</fullName>
                </value>
                <value>
                    <fullName>San Nicolas</fullName>
                </value>
                <value>
                    <fullName>Santolan</fullName>
                </value>
                <value>
                    <fullName>San Miguel</fullName>
                </value>
                <value>
                    <fullName>Sta. Cruz</fullName>
                </value>
                <value>
                    <fullName>Sta. Lucia</fullName>
                </value>
                <value>
                    <fullName>Sta. Rosa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Address_City_Municipal__c</fullName>
        <description>Service address city / municipal</description>
        <inlineHelpText>Service address city / municipal</inlineHelpText>
        <label>Service Address City / Municipal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cainta</fullName>
                </value>
                <value>
                    <fullName>Makati City</fullName>
                </value>
                <value>
                    <fullName>Mandaluyong</fullName>
                </value>
                <value>
                    <fullName>Manila City</fullName>
                </value>
                <value>
                    <fullName>Pasig City</fullName>
                </value>
                <value>
                    <fullName>Pateros</fullName>
                </value>
                <value>
                    <fullName>Q. C.-Kaunlaran Dist 4</fullName>
                </value>
                <value>
                    <fullName>San Juan</fullName>
                </value>
                <value>
                    <fullName>Taguig City</fullName>
                </value>
                <value>
                    <fullName>Taytay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Address_Landmarks_Directions__c</fullName>
        <description>Service address landmarks / directions</description>
        <inlineHelpText>Service address landmarks / directions</inlineHelpText>
        <label>Service Address Landmarks / Directions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Address_Province__c</fullName>
        <description>Service address province</description>
        <inlineHelpText>Service address province</inlineHelpText>
        <label>Service Address Province</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Metro Manila</fullName>
                    <default>true</default>
                    <label>Metro Manila</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Address_Street_Name__c</fullName>
        <description>Service address street name</description>
        <inlineHelpText>Service address street name</inlineHelpText>
        <label>Service Address Street Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Address_Street_No__c</fullName>
        <description>Service address street no</description>
        <inlineHelpText>Service address street no</inlineHelpText>
        <label>Service Address House No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Address_Subdivision__c</fullName>
        <description>Service address subdivision</description>
        <inlineHelpText>Service address subdivision</inlineHelpText>
        <label>Service Address Subdivision / Bldg Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Address_Unit_No__c</fullName>
        <description>Service address unit no</description>
        <inlineHelpText>Service address unit no</inlineHelpText>
        <label>Service Address Unit No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_ID_Number__c</fullName>
        <label>Service ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_is_HMB__c</fullName>
        <description>Hidden field for R2. Count all accounts with HMB Service segment. CSM-6389.</description>
        <label>Service is HMB?</label>
        <summaryFilterItems>
            <field>Agreement__c.Segment__c</field>
            <operation>equals</operation>
            <value>Home and Micro Business</value>
        </summaryFilterItems>
        <summaryForeignKey>Agreement__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>StageStatusImg__c</fullName>
        <formula>IF(ISPICKVAL(StageStatus__c,&quot;Incomplete Account&quot;), IMAGE(&apos;/resource/Onboardingprocess1/Onboardingprocess/OnboardingStage1.png&apos;,&apos;Complete Account&apos;, 100, 700),
IF(ISPICKVAL(StageStatus__c,&quot;Accept Customer&quot;), IMAGE(&apos;/resource/Onboardingprocess1/Onboardingprocess/OnboardingStage2.png&apos;, &apos;Accept Customer&apos;, 100, 700),
IF(ISPICKVAL(StageStatus__c,&quot;Offer Products&quot;), IMAGE(&apos;/resource/Onboardingprocess1/Onboardingprocess/OnboardingStage3.png&apos;, &apos;Offer Products&apos;, 100, 700),
IF(ISPICKVAL(StageStatus__c,&quot;Capture Signature&quot;), IMAGE(&apos;/resource/Onboardingprocess1/Onboardingprocess/OnboardingStage4.png&apos;, &apos;Capture Signature&apos;, 100, 700),
IF(ISPICKVAL(StageStatus__c,&quot;Start Billing&quot;), IMAGE(&apos;/resource/Onboardingprocess1/Onboardingprocess/OnboardingStage5.png&apos;, &apos;Start Billing&apos;, 100, 700),
IMAGE(&apos;/resource/Onboardingprocess1/Onboardingprocess/OnboardingStage1.png&apos;, &apos;Complete&apos;, 100, 700))))))</formula>
        <label>Onboarding</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StageStatus__c</fullName>
        <label>Stage Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Incomplete Account</fullName>
                </value>
                <value>
                    <fullName>Accept Customer</fullName>
                </value>
                <value>
                    <fullName>Offer Products</fullName>
                </value>
                <value>
                    <fullName>Capture Signature</fullName>
                </value>
                <value>
                    <fullName>Start Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Identification_No__c</fullName>
        <label>Tax Identification Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <formula>Owner.Division</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalSquareMeters__c</fullName>
        <label>Total Square Meters</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;65</fullName>
                </value>
                <value>
                    <fullName>65-124</fullName>
                </value>
                <value>
                    <fullName>125-149</fullName>
                </value>
                <value>
                    <fullName>150-250</fullName>
                </value>
                <value>
                    <fullName>&gt;250</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalValueOfWonOpportunities__c</fullName>
        <label>Total Value Of Won Opportunities</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Twitter_Name__c</fullName>
        <label>Twitter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V10_Customer_No__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Customer #</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Read-only field. You need to submit the record for approval first before Tagingg the Customer/Account as VIP.</inlineHelpText>
        <label>Non-Disconnectable</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_Accounts</fullName>
        <columns>Account_ID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Business_Accounts</fullName>
        <columns>Account_ID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.CXE_Business_Account</value>
        </filters>
        <label>All Business Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Executing_Personnel</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Office__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.CXE_Executing_Personnel</value>
        </filters>
        <label>All Executing Personnel</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_HMB_Residential_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_ID__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_is_HMB__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>All HMB – Residential Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Individual_Accounts</fullName>
        <columns>Account_ID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.CXE_Individual_Account</value>
        </filters>
        <label>All Individual Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Person_Accounts</fullName>
        <columns>Account_ID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.CXE_Individual_Account</value>
        </filters>
        <label>All Person Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_RES_Accounts1</fullName>
        <columns>Account_ID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retail_Electricity_Supplier__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All RES Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CBG_Accounts</fullName>
        <columns>Account_ID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Conglomerate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CBG Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>Account_ID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>Account_ID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>BusinessCustomer</fullName>
        <active>false</active>
        <label>Business - Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>BusinessProspect</fullName>
        <active>false</active>
        <label>Business - Prospect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account2</label>
    </recordTypes>
    <recordTypes>
        <fullName>CBG_Commercial_Industrial</fullName>
        <active>false</active>
        <label>CBG - Commercial/Industrial</label>
    </recordTypes>
    <recordTypes>
        <fullName>CBG_Conglomerate_Accounts</fullName>
        <active>true</active>
        <label>CBG - Conglomerate Accounts</label>
    </recordTypes>
    <recordTypes>
        <fullName>CBG_National_Gvernment</fullName>
        <active>false</active>
        <label>CBG - National Gvernment</label>
    </recordTypes>
    <recordTypes>
        <fullName>CXE_Business_Account</fullName>
        <active>true</active>
        <description>CXE Business Account</description>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>HMB_Local_Government_Units</fullName>
        <active>false</active>
        <label>HMB - Local Government Units</label>
    </recordTypes>
    <recordTypes>
        <fullName>HMB_Micro_Business</fullName>
        <active>false</active>
        <label>HMB - Micro Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Residential_Customer</fullName>
        <active>false</active>
        <label>Non-Residential Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>RES_Customer</fullName>
        <active>false</active>
        <label>CXE RES Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>SCS_Business_Account</fullName>
        <active>true</active>
        <description>Social Customer Service Business Account</description>
        <label>SCS Business Account</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CXE_Account_Ownership_Transfer</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISCHANGED(OwnerId), 
AND( 
PRIORVALUE( Manager_of_Account_Owner__c) &lt;&gt; $User.Id, 
PRIORVALUE( CXE_Manager_of_Account_Owner_L2__c ) &lt;&gt; $User.Id, 
PRIORVALUE( CXE_Manager_of_Account_Owner_L3__c ) &lt;&gt; $User.Id, 
PRIORVALUE( CXE_Manager_of_Account_Owner_L4__c ) &lt;&gt; $User.Id, 
PRIORVALUE( OwnerId ) &lt;&gt; $Setup.OrganizationSettings__c.Default_Account_Owner__c 
) 

, AND(NOT($Profile.Name = &quot;System Administrator&quot;) ,NOT($Profile.Name = &quot;Super User 2&quot;)) 
)</errorConditionFormula>
        <errorMessage>Only the account owner&apos;s upstream managers can transfer the ownership of an account record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Account_Primary_Email</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(      PersonEmail  ),NOT(ISBLANK(     Email_2__pc  )))</errorConditionFormula>
        <errorMessage>Kindly populate the primary email first.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Account_Primary_Mobile</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(    Mobile_1__pc   ), 
OR(NOT(ISBLANK( Mobile_2__pc )),NOT(ISBLANK( Mobile_3__pc ))))</errorConditionFormula>
        <errorMessage>Please populate Primary Mobile first.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_BussMobileShouldOnlyContainNumbers</fullName>
        <active>true</active>
        <description>Mobile Phone field should only contain numbers.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK(   Mobile_Phone__c )), 
NOT(ISNUMBER( Mobile_Phone__c ))
,$User.By_Pass_Validation__c = FALSE)</errorConditionFormula>
        <errorDisplayField>Mobile_Phone__c</errorDisplayField>
        <errorMessage>Mobile Phone should only contain numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Contact_Primary_Phone</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(   PersonHomePhone  ),NOT(ISBLANK( Telephone_2__pc )))</errorConditionFormula>
        <errorMessage>Please populate Primary Telephone first.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Email_Format</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(Email__c)),NOT(REGEX( Email__c ,&apos;([a-zA-Z0-9_\\-\\.]+)@((\\[a-z]{1,3}\\.[a-z]{1,3}\\.[a-z]{1,3}\\.)|(([a-zA-Z0-9\\-]+\\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})&apos;)),$User.By_Pass_Validation__c = FALSE)</errorConditionFormula>
        <errorDisplayField>Email__c</errorDisplayField>
        <errorMessage>Invalid Email Address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_PersonMobileShouldOnlyContainNumbers</fullName>
        <active>true</active>
        <description>Mobile 1 field should only contain numbers.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK(   Mobile_1__pc  )), 
NOT(ISNUMBER( Mobile_1__pc  ))
,$User.By_Pass_Validation__c = FALSE)</errorConditionFormula>
        <errorDisplayField>PersonMobilePhone</errorDisplayField>
        <errorMessage>Mobile 1 should only contain numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_PhoneShouldOnlyContainNumbers</fullName>
        <active>true</active>
        <description>Phone field should only contain numbers.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK( Phone )), 
NOT(ISNUMBER( Phone ))
,$User.By_Pass_Validation__c = FALSE)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Phone should only contain numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Prevent_Future_DOB</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISNULL( PersonBirthdate )), 
PersonBirthdate  &gt;= Today()
,$User.By_Pass_Validation__c = FALSE)</errorConditionFormula>
        <errorMessage>Date of Birth cannot be set to the current or a future date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Primary_Email_Phone_Telephone</fullName>
        <active>true</active>
        <description>Primary Phone OR Primary Telephone OR Primary Email</description>
        <errorConditionFormula>AND( 
RecordType.DeveloperName = &apos;CXE_Business_Account&apos;, 
ISBLANK(Phone),
ISBLANK(Mobile_Phone__c),
ISBLANK(Email__c),
$User.By_Pass_Validation__c = FALSE 
)</errorConditionFormula>
        <errorMessage>Please input value for Primary Telephone, Primary Mobile Phone or Primary Email.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Primary_Email_Phone_Telephone_Ind</fullName>
        <active>true</active>
        <description>Primary Phone OR Primary Telephone OR Primary Email for Individual Account</description>
        <errorConditionFormula>AND( RecordType.DeveloperName = &apos;CXE_Individual_Account&apos;,
ISBLANK(     PersonHomePhone     ), 
ISBLANK (      Mobile_1__pc    ),
ISBLANK (  PersonEmail  ),
$User.By_Pass_Validation__c = FALSE )</errorConditionFormula>
        <errorMessage>Please input value for Primary Telephone, Primary Mobile Phone or Primary Email.</errorMessage>
    </validationRules>
</CustomObject>